<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/add_to_favorite"
            android:icon="@drawable/ic_add_favorite"
            android:iconifiedByDefault="false"
            android:title="@string/favorite"
            app:showAsAction="ifRoom" />
</menu>