<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">
    <ProgressBar
            android:visibility="gone"
            android:layout_centerInParent="true" android:id="@+id/progress_circular"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <Spinner
            android:padding="10dp"
            android:id="@+id/spinner_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </Spinner>

    <android.support.v4.widget.SwipeRefreshLayout
            android:layout_below="@id/spinner_next"
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/match_next_rcy"
            android:layout_width="wrap_content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>